# gomoku-rm

./: Cargo.toml  Cross.toml  LICENSE  README.md
packaging/: VELBUILD  deploy.sh  external.manifest.json  make_icon.py
src/: board.rs  canvas.rs  config.rs  i18n.rs  main.rs  savestate.rs
src/engine/: alphabeta.rs  evaluate.rs  mod.rs  shape.rs
src/scene/: game.rs  menu.rs  mod.rs  settings.rs
