[package]
name = "gomoku-rm"
version = "0.1.0"
edition = "2021"
description = "Gomoku game for reMarkable 2 (AppLoad / xovi)"

[dependencies]
libremarkable = "0.7.0"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
