[package]
name = "gomoku-rm"
version = "0.1.0"
edition = "2021"
description = "Gomoku game for reMarkable 2 (AppLoad / xovi)"

[dependencies]
libremarkable = "0.7.0"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

# Patched dependencies for the reMarkable 2 quirks:
# - evdev: silences a panic ("got a key event despite not supporting keys")
#   triggered by the rM2's pt_mt multitouch device, whose capability bitmap
#   omits EV_KEY but which still emits BTN_TOUCH events.
# - libremarkable: rM2's pt_mt does not emit ABS_MT_PRESSURE, so the upstream
#   multitouch handler never sets `finger.pressed = true` and Press events
#   are never produced. We treat a non-negative ABS_MT_TRACKING_ID as pressed,
#   which is the standard MT-B protocol interpretation.
[patch.crates-io]
evdev = { path = "vendor/evdev" }
libremarkable = { path = "vendor/libremarkable" }
